small alignment issue, still not perfect

--- a/src/pages/css/Market.css
+++ b/src/pages/css/Market.css
@@ -25,7 +25,7 @@ p{
 }
 
 .searchContainer{
-  width: 66vw;
+  width: 100%;
   height: auto;
   margin-top: 5vh;
   margin-bottom: 5vh;
